# CUDANeuralNetworks

./: CMakeLists.txt  NetConfig.cu  NetConfig.cuh  main.cu  unzipData.py
dataset/: Dataset.cu  Dataset.cuh  TrainData.cu  TrainData.cuh
datasets/: Dataset.cu  Dataset.cuh  TrainData.cu  TrainData.cuh
layers/: DenseLayer.cu  DenseLayer.cuh  InputLayerDense.cu  InputLayerDense.cuh  Layer.cu  Layer.cuh
models/: ModelMLP.cu  ModelMLP.cuh
utils/: BMPDecomp.cu  BMPDecomp.cuh  LogUtils.cu  LogUtils.cuh  MatrixOperations.cu  MatrixOperations.cuh
